# simple-math-mcp

./: README.md  pyproject.toml
src/mcpserver/: deployment.py
